# googletest-experiments

./: CMakeLists.txt  README.md  mock.cc  test_f.cc  test_p.cc
issues/cppcoreguidelines-avoid-non-const-global-variables/: README.md
issues/mock-leak/: README.md
